A few small bugfixes

--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #1d5888;
-    --secondary-color: #ff5959;
+    --primary-color: #485f80;
+    --secondary-color: #f05f24;
     --dark-color: #292929;
     --white-color: #e7e7e7;
 }
